Bug 1611372 - Invalidate WebRender frame on nsWindow::OnExposeEvent() r=nical

Differential Revision: https://phabricator.services.mozilla.com/D71139