widget/gtk/nsWindow.cpp
@@ -113,6 +113,8 @@ using namespace mozilla::widget;
 #include "mozilla/layers/CompositorBridgeParent.h"
 #include "mozilla/layers/CompositorThread.h"
 #include "mozilla/layers/KnowsCompositor.h"
+#include "mozilla/layers/WebRenderBridgeChild.h"
+#include "mozilla/layers/WebRenderLayerManager.h"
 
 #include "mozilla/layers/APZInputBridge.h"
 #include "mozilla/layers/IAPZCTreeManager.h"
@@ -2409,6 +2411,12 @@ gboolean nsWindow::OnExposeEvent(cairo_t* cr) {
     // don't have a compositing window manager, our pixels could be stale.
     GetLayerManager()->SetNeedsComposite(true);
     GetLayerManager()->SendInvalidRegion(region.ToUnknownRegion());
+    if (WebRenderLayerManager* wrlm =
+            GetLayerManager()->AsWebRenderLayerManager()) {
+      if (WebRenderBridgeChild* bridge = wrlm->WrBridge()) {
+        bridge->SendInvalidateRenderedFrame();
+      }
+    }
   }
 
   RefPtr<nsWindow> strongThis(this);
